# autobyteus-mcps

./: README.md
autobyteus-image-audio/: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt  runtime_callstack_simulation
autobyteus-image-audio/src/image_audio_mcp/: server.py
autobyteus-image-audio/tests/: conftest.py  test_integration.py  test_server_local.py
browser-mcp/: README.md
browser-mcp/src/browser_mcp/: server.py  tabs.py  types.py
browser-mcp/tests/: test_integration_real.py  test_server.py
computer-use-mcp/: README.md  pyproject.toml
computer-use-mcp/src/computer_use_mcp/: config.py  runner.py  server.py
computer-use-mcp/tests/: test_config.py  test_runner.py  test_server.py
tickets/done/browser-mcp-transport-modes/: api-e2e-testing.md  code-review.md  future-state-runtime-call-stack-review.md  future-state-runtime-call-stack.md  implementation-plan.md  implementation-progress.md  investigation-notes.md  requirements.md  workflow-state.md
tickets/done/x11-computer-use-mcp/: aggregated-validation.md  future-state-runtime-call-stack-review.md  future-state-runtime-call-stack.md  implementation-plan.md  implementation-progress.md  internal-code-review.md  investigation-notes.md  proposed-design.md  requirements.md  workflow-state.md
tickets/in-progress/tts-mcp-macos-intel-kokoro-onnx-support/: future-state-runtime-call-stack-review.md  future-state-runtime-call-stack.md  (+5 more)
tts-mcp/: README.md
tts-mcp/scripts/: install_kokoro_onnx_macos.sh  install_tts_runtime.sh
tts-mcp/tests/: test_platform.py  test_runtime_bootstrap.py
(+13 files in other folders)
